# XPIRe

./: .gitignore  CMakeLists.txt  FindGMP.cmake  FindMPFR.cmake
client/: CMakeLists.txt
client/client/: CMakeLists.txt  PIRClient.hpp  main.hpp
client/events/: CMakeLists.txt
client/optim/: CMakeLists.txt  PIROptimizer.hpp
client/pir/: CMakeLists.txt  PIRQueryGenerator.cpp  PIRQueryGenerator.hpp  PIRReplyExtraction.hpp  PIRReplyWriter.hpp
client/tests/: CMakeLists.txt
common/: CMakeLists.txt
common/crypto/: CMakeLists.txt  HomomorphicCrypto.hpp  NFLLWE.hpp
common/optim/: CMakeLists.txt  OptimService.hpp
server/: CMakeLists.txt
server/optim/: CMakeLists.txt  PIROptimizer.hpp
server/pir/: CMakeLists.txt  GenericPIRReplyGenerator.hpp  PIRReplyGeneratorFactory.hpp  PIRReplyGeneratorGMP.hpp  PIRReplyGeneratorNFL.hpp  PIRReplyGeneratorTrivial.hpp
server/server/: CMakeLists.txt  PIRSession.hpp  ServerService.hpp
